deploy/local/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guardrails
---
apiVersion: v1
kind: Namespace
metadata:
  name: guardrail-providers
